test/types/records/ferguson/init-eq-other-only.good
init-eq-other-only.chpl:15: In function 'main':
init-eq-other-only.chpl:17: error: could not find a copy initializer ('init=') for type 'InitEqOtherOnly' from type 'InitEqOtherOnly'
init-eq-other-only.chpl:4: note: this candidate did not match: InitEqOtherOnly.init=(other: int)
init-eq-other-only.chpl:17: note: because actual argument #1 with type 'InitEqOtherOnly'
init-eq-other-only.chpl:4: note: is passed to formal 'other: int(64)'
